virtual-service-1.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: java-demo-vs-1
  namespace: testing-1
spec:
  awsName: java-demo-svc-1.testing-1.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: java-demo-vr-1

---
apiVersion: v1
kind: Service
metadata:
  name: java-demo-svc-1
  namespace: testing-1
spec:
  ports:
    - port: 9080
      name: http
